# civgame

./: .gitignore  AGENTS.md  CLAUDE.md  COMMUNITY_HUB_PLAN.md  CONSTRUCTION_OVERHAUL_PLAN.md  Cargo.toml  HTN_PLAN.md  HTN_PLAN_PATHING.md  SANDBOX.md  TODO.md  TODO.rtf  civgame_spritesheet_meta.json  faction_shared_knowledge_plan.md  farming-realism.md  fix-well-seeding.md  focused-farm-plan.md  market-plan.rtf  regional_p2p_economy_plan.md
.cargo/: config.toml
.claude/: settings.json
plans/: agent-decision-architecture.md  animal-biome-expansion.md  animal-husbandry-v2-draftwork.md  animal-husbandry-v2-manure.md  animal-husbandry.md  autonomous-food-labor-market-completion.md  balanced-farming.md  biome-edge.md  biome-native-plants-followups.md  biome-native-plants.md  carve-plan-sync-followup.md  civic-domain.md  cohort-lod.md  construction-fallback.md  craft-demand.md  cropland-cleanup.md  daily_gathering_quota.md  diplomacy-espionage.md  diplomacy-federations.md  diplomacy-marriage.md  diplomacy.md  duplicate-field-prep.md  dynamic-wells.md  era-settlement-seeding.md  era-time.md  exact-tile-reachability.md  faction-decrowding.md  faction_archetype_refactor.md  faction_construction_overhaul.md  farm-idle-fix.md  farm-layout.md  farm-phase-species-biome.md  farm-planner.md  farm-plot-reset.md  farm-scaling-plan.md  farm-zone-redesign.md  fieldwork-expiry.md  fishability-property.md  fishing.md  fix-bedless-sleep.md  (+93 more)
scripts/: screenshot.ps1  test.ps1
src/: collections.rs  game_state.rs  main.rs  net_id.rs  sandbox.rs
wiki/: index.md  log.md  schema.md
(+242 files in other folders)
